storage/innobase/dict/dict0boot.cc
@@ -218,8 +218,7 @@ dberr_t dict_boot()
 	dict_sys.create();
 
 	dberr_t err;
-	const buf_block_t *d = buf_page_get_gen(hdr_page_id, 0, RW_S_LATCH,
-						nullptr, BUF_GET, &mtr, &err);
+	const buf_block_t *d = recv_sys.recover(hdr_page_id, &mtr ,&err);
 	if (!d) {
 		mtr.commit();
 		return err;
@@ -393,19 +392,6 @@ dberr_t dict_boot()
 		UT_BITS_IN_BYTES(unsigned(table->indexes.start->n_nullable)));
 
 	mtr.commit();
-
-	if (err == DB_SUCCESS) {
-		/* Load definitions of other indexes on system tables */
-
-		dict_load_sys_table(dict_sys.sys_tables);
-		dict_load_sys_table(dict_sys.sys_columns);
-		dict_load_sys_table(dict_sys.sys_indexes);
-		dict_load_sys_table(dict_sys.sys_fields);
-		dict_sys.unlock();
-		dict_sys.load_sys_tables();
-	} else {
-		dict_sys.unlock();
-	}
-
+	dict_sys.unlock();
 	return err;
 }
